<resources>
    <string name="app_name">Fit Your Fat</string>
    <string name="action_settings">Settings</string>
    <string name="main_start_btn">Start</string>
    <string name="main_pause_btn">Pause</string>
    <string name="main_stop_btn">Stop</string>
    <string name="main_resume_btn">Resume</string>
    <string name="laps">Laps %1$d/%2$d</string>
    <string name="workout_laps">%d laps</string>
    <string name="form_workout_hint">Workout name</string>
    <string name="form_laps_hint">Laps</string>
    <string name="form_exercises_label">Exercises</string>
    <string name="action_save">Save</string>
    <string name="form_err_required">All fields should be filled</string>
    <string name="form_err_exercises">You should add at least one exercise</string>
    <string name="form_err_name_required">Exercise name should be filled</string>
    <string name="workouts_title">Workouts</string>
    <string name="form_exercise_name">Exercise name</string>
    <string name="form_exercise_desc">Description</string>
    <string name="form_exercises_time">Duration</string>
    <string name="form_err_duration">Duration should be more than 0</string>
    <string name="pref_screen_on_title">Screen on</string>
    <string name="pref_screen_on_summary">Keep screen on while app is open</string>
    <string name="pref_pause_on_call_title">Pause on call</string>
    <string name="pref_pause_on_call_summary">Pause workout on incoming call and resume after it ends</string>
    <string name="pref_about_summary">About</string>
    <string name="pref_category_main">Main settings</string>
    <string name="pref_play_sounds_title">Play sounds</string>
    <string name="pref_play_voice_title">Play voice</string>
    <string name="pref_category_sound_and_voice">Sound and Voice</string>
    <string name="pref_category_sound">Sounds</string>
    <string name="pref_exercise_finish_title">Exercise finish</string>
    <string name="pref_workout_finish_title">Workout finish</string>
    <string name="pref_category_voice">Voice</string>
    <string name="pref_exercise_half_title">Exercise half</string>
    <string name="pref_countdown_title">Last 3 seconds</string>
    <string name="pref_exercise_name_title">Exercise name</string>
    <string name="pref_category_vibration">Vibration</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_category_other">Other</string>
    <string name="activity_about">About</string>
    <string name="activity_settings">Settings</string>
    <string name="main_exit_btn">Exit</string>
    <string name="form_err_laps">Laps count should be more than 0</string>
    <string name="about_developer">Developed by Artem Korzh</string>
    <string name="about_email" translatable="false">"Email: "</string>
    <string name="developer_email" translatable="false">artycake.developer@gmail.com</string>
    <string name="app_info">%1$s v %2$s</string>
    <string name="rate_text_before">"Please, "</string>
    <string name="rate_text_rate">rate this app</string>
    <string name="rate_text_after">, recommend to your friends if you like it. Write any suggestions or complaints to email showed above</string>
    <string name="rate_dialog_title">Rate %s</string>
    <string name="rate_dialog_rate">Rate</string>
    <string name="rate_dialog_never">Never</string>
    <string name="rate_dialog_later">Later</string>
    <string name="rate_dialog_message">If you like this app, please rate it. It will take few minutes</string>
    <string name="new_workout_title">Add new workout</string>
    <string name="permission_phone_state">Permission is necessary to pause the timer during the call</string>
    <string name="permissions_grant">Grant</string>
    <string name="permissions_ok">OK</string>
</resources>
