<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_workout_hint"
            android:maxLength="20"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/workout_laps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_laps_hint"
            android:inputType="number"
            android:maxLength="2"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/form_exercises_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/exercises"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"/>

</LinearLayout>
