<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.artycake.fityourfat.activities.WorkoutFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/workout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_workout_hint"
                android:maxLength="20"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/workout_laps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_laps_hint"
                android:inputType="number"
                android:maxLength="2"/>
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/form_exercises_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/exercises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"/>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add"
        android:tint="@color/colorPrimaryDark"/>

</android.support.design.widget.CoordinatorLayout>
