<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.artycake.fityourfat.activities.WorkoutFormActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_exercise_name"
            android:maxLength="30"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/exercise_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_exercise_desc"
            android:maxLength="200"
            android:maxLines="3"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/form_exercises_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <com.aigestudio.wheelpicker.WheelPicker
            android:id="@+id/minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:wheel_atmospheric="true"
            app:wheel_curved="true"
            app:wheel_cyclic="true"
            app:wheel_item_align="right"
            app:wheel_same_width="true"
            app:wheel_selected_item_text_color="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <com.aigestudio.wheelpicker.WheelPicker
            android:id="@+id/seconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:wheel_atmospheric="true"
            app:wheel_curved="true"
            app:wheel_cyclic="true"
            app:wheel_item_align="left"
            app:wheel_selected_item_text_color="@color/colorAccent"/>

    </LinearLayout>
</LinearLayout>
